--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     
     <section id="home" class="hero">
         <div class="hero-content">
-            <h1 class="glitch-text" data-text="CYBER DEVELOPER">CYBER DEVELOPER</h1>
-            <p class="subtitle">Full-Stack Developer | UI/UX Designer | Digital Architect</p>
+            <h1 class="glitch-text" data-text="CYBER DEVELOPER">FERDIO PAGANI</h1>
+            <p class="subtitle">Full-Stack Developer | Ai-Developer | KriptoGrafi</p>
             <a href="#projects" class="cta-button">Explore My Work</a>
         </div>
     </section>
